[gd_scene load_steps=22 format=3 uid="uid://dexhilxkt3sfx"]

[ext_resource type="Texture2D" uid="uid://dptaxss6pbff" path="res://gui/menubar/game/game.png" id="1_rfm8j"]
[ext_resource type="Script" path="res://gui/menubar/menu_bar.gd" id="1_t4bap"]
[ext_resource type="Texture2D" uid="uid://u6ekak576bqm" path="res://gui/menubar/game/game_pressed.png" id="2_q58sv"]
[ext_resource type="Texture2D" uid="uid://crq736u0dbxqs" path="res://gui/menubar/game/game_hover.png" id="3_d1iuc"]
[ext_resource type="Texture2D" uid="uid://3503mxy0k3bb" path="res://gui/menubar/game/help.png" id="4_lvg2a"]
[ext_resource type="Texture2D" uid="uid://e8w3otxmu8lw" path="res://gui/menubar/game/help_pressed.png" id="5_k6cpl"]
[ext_resource type="Texture2D" uid="uid://blkg33w8kboo8" path="res://gui/menubar/game/help_hover.png" id="6_httw1"]
[ext_resource type="Texture2D" uid="uid://cdd7qn3ontr46" path="res://gui/menubar/game/game_menu.png" id="8_nx40u"]
[ext_resource type="Texture2D" uid="uid://lfwdr7cnlyjv" path="res://gui/menubar/game/new_game_hover.png" id="9_v5073"]
[ext_resource type="Texture2D" uid="uid://dp2g0b25ca3rk" path="res://gui/menubar/help/help_menu.png" id="9_ve4p7"]
[ext_resource type="PackedScene" uid="uid://dkw5woflnj55d" path="res://gui/menubar/menu_check_button.tscn" id="10_y5woj"]
[ext_resource type="Texture2D" uid="uid://dcfia5e7rm6ba" path="res://gui/menubar/game/intermediate_hover.png" id="11_ylpyw"]
[ext_resource type="Texture2D" uid="uid://dgmlf4l0ofnck" path="res://gui/menubar/game/expert_hover.png" id="12_xcf61"]
[ext_resource type="Texture2D" uid="uid://hvfmc3a8jx6v" path="res://gui/menubar/game/custom_hover.png" id="13_hte2k"]
[ext_resource type="Texture2D" uid="uid://ci75738bavp7x" path="res://gui/menubar/game/marks_hover.png" id="14_khsgg"]
[ext_resource type="Texture2D" uid="uid://btjfkvcwi5835" path="res://gui/menubar/game/color_hover.png" id="15_1tb7o"]
[ext_resource type="Texture2D" uid="uid://fj3haglgku7i" path="res://gui/menubar/game/sound_hover.png" id="16_ekpdi"]
[ext_resource type="Texture2D" uid="uid://ddttv5u7dic3q" path="res://gui/menubar/game/best_times_hover.png" id="17_5wts1"]
[ext_resource type="Texture2D" uid="uid://c2ftnmogqdjko" path="res://gui/menubar/game/exit_hover.png" id="18_f58i0"]
[ext_resource type="PackedScene" uid="uid://ds0vch7nlj15y" path="res://gui/custommodal/custom_modal.tscn" id="20_wplyx"]

[sub_resource type="Shortcut" id="Shortcut_amrtu"]

[node name="MenuBar" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -440.0
offset_bottom = -494.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_t4bap")

[node name="ClickOutsideMenuDetectorHack" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = -5002.0
offset_top = -5022.0
offset_right = 4998.0
offset_bottom = 4978.0

[node name="GameButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 39.0
offset_bottom = 18.0
texture_normal = ExtResource("1_rfm8j")
texture_pressed = ExtResource("2_q58sv")
texture_hover = ExtResource("3_d1iuc")
texture_focused = ExtResource("2_q58sv")

[node name="HelpButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 39.0
offset_right = 72.0
offset_bottom = 18.0
texture_normal = ExtResource("4_lvg2a")
texture_pressed = ExtResource("5_k6cpl")
texture_hover = ExtResource("6_httw1")
texture_focused = ExtResource("5_k6cpl")

[node name="GameMenu" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_top = 18.0
offset_right = 125.0
offset_bottom = 230.0
texture = ExtResource("8_nx40u")

[node name="NewButton" type="TextureButton" parent="GameMenu"]
layout_mode = 0
offset_left = 3.0
offset_top = 2.0
offset_right = 122.0
offset_bottom = 19.0
shortcut = SubResource("Shortcut_amrtu")
texture_hover = ExtResource("9_v5073")

[node name="BeginnerButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 29.0
offset_right = 122.0
offset_bottom = 46.0

[node name="IntermediateButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 46.0
offset_right = 122.0
offset_bottom = 63.0
texture_hover = ExtResource("11_ylpyw")

[node name="ExpertButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 63.0
offset_right = 122.0
offset_bottom = 80.0
texture_hover = ExtResource("12_xcf61")

[node name="CustomButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 80.0
offset_right = 122.0
offset_bottom = 97.0
texture_hover = ExtResource("13_hte2k")

[node name="MarksButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 106.0
offset_right = 122.0
offset_bottom = 123.0
texture_hover = ExtResource("14_khsgg")

[node name="ColorButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 123.0
offset_right = 122.0
offset_bottom = 140.0
texture_hover = ExtResource("15_1tb7o")

[node name="SoundButton" parent="GameMenu" instance=ExtResource("10_y5woj")]
layout_mode = 0
offset_left = 3.0
offset_top = 140.0
offset_right = 122.0
offset_bottom = 157.0
texture_hover = ExtResource("16_ekpdi")

[node name="BestTimesButton" type="TextureButton" parent="GameMenu"]
layout_mode = 0
offset_left = 3.0
offset_top = 166.0
offset_right = 122.0
offset_bottom = 183.0
texture_hover = ExtResource("17_5wts1")

[node name="ExitButton" type="TextureButton" parent="GameMenu"]
layout_mode = 0
offset_left = 3.0
offset_top = 192.0
offset_right = 122.0
offset_bottom = 209.0
texture_hover = ExtResource("18_f58i0")

[node name="HelpMenu" type="TextureRect" parent="."]
visible = false
layout_mode = 0
offset_left = 39.0
offset_top = 17.0
offset_right = 208.0
offset_bottom = 100.0
texture = ExtResource("9_ve4p7")

[node name="CustomModal" parent="." instance=ExtResource("20_wplyx")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 129.0
offset_bottom = 145.0
grow_horizontal = 1
grow_vertical = 1

[connection signal="gui_input" from="ClickOutsideMenuDetectorHack" to="." method="_on_click_outside_menu_detector_hack_gui_input"]
[connection signal="button_down" from="GameButton" to="." method="_on_game_button_button_down"]
[connection signal="mouse_entered" from="GameButton" to="." method="_on_game_button_mouse_entered"]
[connection signal="button_down" from="HelpButton" to="." method="_on_help_button_button_down"]
[connection signal="mouse_entered" from="HelpButton" to="." method="_on_help_button_mouse_entered"]
[connection signal="pressed" from="GameMenu/NewButton" to="." method="_on_new_button_pressed"]
[connection signal="pressed" from="GameMenu/BeginnerButton" to="." method="_on_beginner_button_pressed"]
[connection signal="pressed" from="GameMenu/IntermediateButton" to="." method="_on_intermediate_button_pressed"]
[connection signal="pressed" from="GameMenu/ExpertButton" to="." method="_on_expert_button_pressed"]
[connection signal="pressed" from="GameMenu/CustomButton" to="." method="_on_custom_button_pressed"]
[connection signal="pressed" from="GameMenu/MarksButton" to="." method="_on_marks_button_pressed"]
[connection signal="pressed" from="GameMenu/ColorButton" to="." method="_on_color_button_pressed"]
[connection signal="pressed" from="GameMenu/SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="change_difficulty" from="CustomModal" to="." method="_on_custom_modal_change_difficulty"]
